--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -19,7 +19,7 @@
 
 .container {
   width: 100%;
-  max-width: 1600px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 60px;
   display: flex;
